--- a/scripts/cleaning_cory.Rmd
+++ b/scripts/cleaning_cory.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Cory chatbot test data cleaning"
+title: "Cory - data cleaning"
 author: "Simon van Baal"
 date: "26/10/2020"
 output: html_document
